--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Global and private chats without any registering.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "stylus ./app/style/index.styl -o ./app/resource/style.css"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,11 @@
   "bugs": {
     "url": "https://github.com/VitorLuizC/chat/issues"
   },
-  "homepage": "https://github.com/VitorLuizC/chat#readme"
+  "homepage": "https://github.com/VitorLuizC/chat#readme",
+  "engines": {
+    "node": "6.9.5"
+  },
+  "devDependencies": {
+    "stylus": "^0.54.5"
+  }
 }
