--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "chat",
   "version": "1.0.0",
   "description": "Global and private chats without any registering.",
-  "main": "index.js",
+  "main": "./app/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ."
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,10 @@
   "bugs": {
     "url": "https://github.com/VitorLuizC/chat/issues"
   },
-  "homepage": "https://github.com/VitorLuizC/chat#readme"
+  "homepage": "https://github.com/VitorLuizC/chat#readme",
+  "dependencies": {
+    "express": "^4.14.1",
+    "pug": "^2.0.0-beta11",
+    "socket.io": "^1.7.2"
+  }
 }
