Add EditorConfig + Package tag "heroku"
Added EditorConfig file to set default file indentation and settings.
Added to package.json tag "heroku" to easy be finded on npmjs.com.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "url": "git+https://github.com/VitorLuizC/chat.git"
   },
   "keywords": [
+    "heroku",
     "chat"
   ],
   "author": "Vitor Luiz Cavalcanti <vitorluizc@outlook.com>",
