Add socket stack + Pug layout
Added socket stack moving main.js to client and set the socket way for
it. Added a Pug layout too, to extends a basic html and some
dependencies.

Other small fixes:
 - npm-debug ignored
 - config server port
 - move script
 - static directory

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node .",
+    "move": "copy .\\app\\chat\\index.js .\\app\\resource\\main.js",
     "build": "stylus ./app/style/index.styl -o ./app/resource/style.css"
   },
   "repository": {
