--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "chat",
   "version": "1.0.0",
   "description": "Global and private chats without any registering.",
-  "main": "./app/index.js",
+  "main": "./app/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node .",
-    "move": "copy .\\app\\chat\\index.js .\\app\\resource\\main.js",
-    "build": "stylus ./app/style/index.styl -o ./app/resource/style.css"
+    "build:script:webpack": "webpack ./app/client.js ./app/resource/main.js",
+    "build:script:babel": "babel ./app/resource/main.js --presets es2015 -o ./app/resource/main.js",
+    "build:stylus": "stylus ./app/style/index.styl -o ./app/resource/style.css",
+    "build:script": "npm run build:script:webpack && npm run build:script:babel",
+    "build": "npm run build:stylus && npm run build:script"
   },
   "repository": {
     "type": "git",
@@ -32,6 +35,9 @@
     "node": "6.9.5"
   },
   "devDependencies": {
-    "stylus": "^0.54.5"
+    "babel-cli": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "stylus": "^0.54.5",
+    "webpack": "^2.2.1"
   }
 }
