--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "express": "^4.14.1",
     "pug": "^2.0.0-beta11",
+    "rupture": "^0.6.2",
     "socket.io": "^1.7.2"
   },
   "engines": {
